--- a/html/common/css/common.css
+++ b/html/common/css/common.css
@@ -25,17 +25,17 @@ section,nav,article,aside,header,footer {
 	display: block;
 }
 body {
-	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+	font-family: 'lucida grande','tahoma','verdana','arial','sans-serif';
 }
 table { font-size: 100%; }
 ol li,
-ul li { list-style: none; }
+ul li { list-style: none; margin-bottom: 6px;}
 blockquote,
 q { quotes: none; }
-table {
+/* table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+} */
 a,
 img,
 fieldset { border: 0; }
@@ -54,6 +54,9 @@ body {
 	font-size: 12px;
 	color: #333333;
 	line-height: 1;
+	background: url('/common/images/h.jpg') no-repeat;
+	width: 1000px;
+	margin: auto;
 }
 p,input { line-height: 1.7; }
 a:link,
@@ -63,7 +66,6 @@ a:hover { color: #047fdd; }
 a { text-decoration: none; }
 a:hover { text-decoration: underline; }
 strong { font-weight: bold; }
-h1,h2,h3,h4,h5,h6 { color: #5a5a5a; }
 h1 a,h2 a,h3 a,h4 a,h5 a,h6 a { font-weight: bold; }
 img.icon { border: 1px solid #d4d4d4; }
 img.icon:hover { border: 1px solid #bbbbbb; }
@@ -106,7 +108,7 @@ select {
 h2 {
 	height: 45px;
 	line-height: 45px;
-	font-size: 14px;
+	font-size: 25px;
 	font-weight: bold;
 	padding-left: 13px;
 }
@@ -119,35 +121,18 @@ h2 {
 	display: none;
 }
 
-#fb_bg {
-	float: left;
-}
-
-#fb_bg_mid{
-	height: 22px; 
-	background: url('/common/images/fb_login_middle.jpg') repeat-x;	
-	float: left;
-	line-height: 22px;
-	color: #FFF;
-	font-size: 11px;
-    line-height: 14px;
-    padding: 4px 6px 3px;
-    font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
-    font-weight: bold;
-}
-#fb_bg_top{
-	background: url('/common/images/fb_login_top.jpg') no-repeat; 
-	width: 25px; 
-	height: 22px;	
-	float: left;
-}
-
-#fb_bg_end {
-	background: url("/common/images/fb_login_end.jpg");
-	width: 2px;
-	height: 22px;
-	float: left;
-}
-#fb_lg{
+.wrapper{
 	
+}
+.fb_login{
+	text-align: center;
+	margin: 10px 0px;
+}
+#txt_message{
+	width: 500px;
+	height: 200px;
+}
+.dv_form{
+	margin: 0 0 0 215px;
+	text-align: center;
 }
