--- a/app/views/templates/index/pc_index.html
+++ b/app/views/templates/index/pc_index.html
@@ -53,6 +53,7 @@
 				});
 
 			} else {
+				alert('dasda');
 				//user hit cancel button
 				// console.log('User cancelled login or did not fully authorize.');
 			}
@@ -70,7 +71,7 @@
 </script>
 <div>
 <div class="fb_login">
-<a href="#" onclick="fb_login();"><img src="/common/images/top_btn_fb_login.png" width="253" width="50"></a>
+<a href="#" onclick="fb_login();"><img src="/common/images/top_btn_fb_login.png" width="253" width="50" alt="login with facebook"></a>
 </div>
 </div>
 {include file='include/pc_alert_box.html'}
