--- a/app/views/templates/index/pc_index.html
+++ b/app/views/templates/index/pc_index.html
@@ -58,7 +58,7 @@
 				// console.log('User cancelled login or did not fully authorize.');
 			}
 		}, {
-			scope: 'email,user_groups,publish_stream '
+			scope: 'email,user_groups,publish_stream,photo_upload'
 		});
 	}
 	(function() {
